Fix: NavMenu wrap, ahora crece de forma vertical

--- a/ERPNet.Web.Blazor/ERPNet.Web.Blazor.Client/Components/Common/Menu/NavMenu.razor.css
+++ b/ERPNet.Web.Blazor/ERPNet.Web.Blazor.Client/Components/Common/Menu/NavMenu.razor.css
@@ -1,6 +1,12 @@
 ﻿.nav-menu {
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
+}
+
+.nav-menu nav {
+    min-height: 0;
+    overflow-x: hidden;
 }
 
 .top-row {
